projects/movieseats/styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");

:root {
  --purple: #9d5dea;
  --lightPurple: #b691e3;
  --dark: #242326;
  --lighterDark: #303030;
}

* {
  padding: 0;
  margin: 0;

  font-family: "Roboto Mono", monospace;
}

body {
  background-color: var(--dark);

  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 90vh;
}

/*
  _    _ ______          _____  ______ _____  
 | |  | |  ____|   /\   |  __ \|  ____|  __ \ 
 | |__| | |__     /  \  | |  | | |__  | |__) |
 |  __  |  __|   / /\ \ | |  | |  __| |  _  / 
 | |  | | |____ / ____ \| |__| | |____| | \ \ 
 |_|  |_|______/_/    \_\_____/|______|_|  \_\
*/

header {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

h1 {
  margin-bottom: 5px;

  color: var(--purple);
}

select {
  /* When selected a highlight box on windows 10 pops up, decoration for that highlight box */
  padding: 5px 0px 5px 5px;
  border-radius: 10px;

  margin-bottom: 20px;

  color: var(--purple);
  background-color: var(--dark);

  border: none;

  font-weight: 700;
}

.info {
  background-color: var(--lighterDark);

  width: 400px !important;
  height: 30px;

  display: flex;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 8px;

  font-size: 12px;
  font-weight: 500;
}

.chairsInfo {
  display: flex;
  align-items: center;

  color: var(--lightPurple);
}

.chair {
  margin: 5px;

  width: 13px;
  height: 13px;
}

.unoccupied {
  content: url("chairNotOccupied.png");
}

.occupied {
  content: url("chairOccupied.png");
}

.selected {
  content: url("chairSelected.png");
}
/*
  __  __          _____ _   _ 
 |  \/  |   /\   |_   _| \ | |
 | \  / |  /  \    | | |  \| |
 | |\/| | / /\ \   | | | . ` |
 | |  | |/ ____ \ _| |_| |\  |
 |_|  |_/_/    \_\_____|_| \_|
*/
main {
  display: flex;
  justify-content: center;
  align-items: center;

  flex-direction: column;
}

.chairSelection {
  display: flex;
  flex-direction: row;
}

.screen {
  width: 35%;
  aspect-ratio: 2 / 1;
  margin: 30px 0px 20px 0px;
  background-color: var(--purple);
  box-shadow: 0 0 20px 10px var(--purple);
}

.chairsGroup {
  display: grid;
  width: max-content;
  grid-template-columns: repeat(var(--chairsInRow), auto);
  margin: 10px 10px 40px 10px;
}

.chairsGroup.center {
  --chairsInRow: 6;
}

.chairsGroup.side {
  --chairsInRow: 3;
}
img {
  transition: all 0.2s ease;
}
img:hover {
  transform: scale(1.2);
}
/*
  ______ ____   ____ _______ ______ _____  
 |  ____/ __ \ / __ \__   __|  ____|  __ \ 
 | |__ | |  | | |  | | | |  | |__  | |__) |
 |  __|| |  | | |  | | | |  |  __| |  _  / 
 | |   | |__| | |__| | | |  | |____| | \ \ 
 |_|    \____/ \____/  |_|  |______|_|  \_\
 */

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#status {
  color: var(--purple);
}

form {
  display: flex;
  flex-direction: column;
}

button {
  padding: 7px;
  margin: 20px 0px 40px 0px;

  background-color: var(--purple);
  border: none;
  border-radius: 10px;

  cursor: pointer;
  transition: all 0.3s ease;
}

button:hover {
  box-shadow: 0 0 10px 3px var(--purple);
}

table {
  margin: 0px 10px 0px 0px;

  border-collapse: collapse;

  color: var(--purple);
}
th {
  font-size: 20px;
  padding: 5px;
}

td {
  text-align: center;
  width: 200px;
  padding: 10px;
  word-break: break-word;
}

.notDisplayed {
  display: none;
}

